tests/errors/semantic/E007_reexport_type.zy
# E007_reexport_type {
    <# ./E007_base <= base

    #> {
        base::PI
    }
}
